<resources>
    <string name="app_name">Fininfocom_Project by Neeraj Mishra</string>
    <string name="fin_infocom_userid_fininfocom_pass_fin_123">FIN INFOCOM\n\nUserID:Fininfocom\nPass:Fin@123\n\n
    By : Neeraj Mishra \n neerajmishra.nith@gmail.com\n8800740705</string>
    <string name="register">REGISTER</string>
    <string name="password">PASSWORD</string>
    <string name="user_id">USER ID</string>
    <string name="login">LOGIN</string>
</resources>